# kalki

./: .env.example  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SOURCES.md  Dockerfile.worker  ETHICS.md  GOVERNANCE.md  INTELLIGENCE_LAYER.md  LEGAL.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
connectors/: README.md  __init__.py  base_connector.py  example_connector.py
connectors/imd/: README.md  __init__.py  connector.py
schema/: __init__.py  models.py
scripts/: init_db.sql  setup_db.py
tests/connectors/: test_imd_connector.py
