[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kalki"
version = "0.1.0"
description = "India's Open Intelligence Platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

dependencies = [
    # HTTP
    "requests>=2.31",
    "httpx>=0.27",

    # Data processing
    "pandas>=2.1",
    "polars>=0.20",

    # PDF / document extraction
    "tabula-py>=2.9",
    "camelot-py[cv]>=0.11",

    # Database
    "psycopg2-binary>=2.9",
    "duckdb>=0.10",
    "sqlalchemy>=2.0",

    # Data validation
    "pydantic>=2.0",

    # Indic language support
    "indic-transliteration>=2.3",
    "langdetect>=1.0",

    # Utilities
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.0",
    "rapidfuzz>=3.0",
    "tenacity>=8.2",       # retry logic for unreliable government APIs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["connectors*", "schema*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
